force-app/main/default/objects/smagicinteract__List_View_Execution__c/smagicinteract__List_View_Execution__c.object-meta.xml
<CustomObject>
    <description>Batch information of list view will be stored .</description>
    <label>List View Execution</label>
    <nameField>
        <label>List View Execution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List View Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>