force-app/main/default/objects/smagicinteract__List_View_Execution__c/fields/smagicinteract__BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__BatchJobId__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>BatchJobId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>