force-app/main/default/objects/smagicinteract__List_View_Execution__c/fields/smagicinteract__Expexted_SMS__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Expexted_SMS__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Expexted SMS</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>