force-app/main/default/objects/smagicinteract__List_View_Execution__c/fields/smagicinteract__List_View_Configuration__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__List_View_Configuration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>List view Config Id for which batch is operating</description>
    <label>List View Configuration</label>
    <referenceTo>smagicinteract__List_View_Configuration__c</referenceTo>
    <relationshipLabel>List View Executions</relationshipLabel>
    <relationshipName>List_View_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>