force-app/main/default/objects/smagicinteract__List_View_Execution__c/fields/smagicinteract__Opt_Out_Records__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Opt_Out_Records__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Opt Out Records</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>