force-app/main/default/objects/smagicinteract__List_View_Execution__c/fields/smagicinteract__SMS_Text__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Text__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>SMS Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>