force-app/main/default/objects/smagicinteract__List_View_Execution__c/fields/smagicinteract__status__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__status__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>