force-app/main/default/objects/smagicinteract__List_View_Execution__c/fields/smagicinteract__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Template_Name__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>