force-app/main/default/objects/smagicinteract__List_View_Execution__c/fields/smagicinteract__Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Time_Taken__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Deprecated. Do not use.</description>
    <label>Time Taken</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>