force-app/main/default/objects/smagicinteract__List_View_Execution__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__List_View_Configuration__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>smagicinteract__Time_Taken__c</columns>
    <columns>smagicinteract__BatchJobId__c</columns>
    <columns>smagicinteract__Expexted_SMS__c</columns>
    <columns>smagicinteract__Messages_Delivered__c</columns>
    <columns>smagicinteract__Messages_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>